--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ p {
     font-size: 28px;
     line-height: 34px;
     font-weight: bold;
+    margin-bottom: 243px;
 }
 
 @media (max-width:729px) {
