--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ header {
     color: #989D9C;
     cursor: pointer;
     margin-right: 23px;
+    text-transform: uppercase;
 }
 
 .button-header {
@@ -82,6 +83,7 @@ p {
     line-height: 34px;
     font-weight: bold;
     margin-bottom: 243px;
+    text-transform: uppercase;
 }
 
 @media (max-width:729px) {
@@ -93,12 +95,14 @@ p {
         display:none;
     }
     
-    h1, h2 {
+    h1 {
         align-items: center;
         justify-content: center;
     }
 
         h2 {
+            align-items: center;
+        justify-content: center;
             margin-bottom: 17px;
         }
 
@@ -108,5 +112,6 @@ p {
     .button-main {
         align-items: center;
         justify-content: center;
+        margin-left: 55px;
     }
 }
